--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -213,7 +213,7 @@
                 </a>
                 <ul class="submenu">
                     <li>@Html.ActionLink("Uso", "")</li>
-                    <li>@Html.ActionLink("Logs", "")</li>
+                    <li>@Html.ActionLink("Logs", "ListarLogs", "Relatorio")</li>
                     <li>@Html.ActionLink("Consumo", "")</li>
 
                 </ul>
