--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Relatorio/ListarLogs.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Relatorio/ListarLogs.cshtml
@@ -16,7 +16,7 @@
     </div> 
     <br />
     <p>
-        <input type="submit" value="Consultar Intervalo" class="btn-glow primary login" />
+        <input type="submit" value="Consultar" class="btn-glow primary login" />
     </p>
 }
 <table id="Grid" class="table table-bordered">
