--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/ListarResidencia.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/ListarResidencia.cshtml
@@ -74,7 +74,7 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "EditarResidencia", new { chave = item.Chave }) |
-            @Html.ActionLink("Delete", "DeleteResidencia", new { chave = item.Chave })
+         @*   @Html.ActionLink("Delete", "DeleteResidencia", new { chave = item.Chave })*@
         </td>
     </tr>
 }
