--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
@@ -21,8 +21,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Ativo)
         </th>
+        
         <th>
-            @Html.DisplayNameFor(model => model.DataAgendamento)
+           Data e Hora do Agendamento
         </th>
         
         <th>
@@ -43,6 +44,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Ativo)
         </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.DataAgendamento)
         </td>
