--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/EditarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/EditarAgendamento.cshtml
@@ -16,11 +16,13 @@
         <div class="editor-field">
             @Html.EditorFor(model => model.Descricao)
             @Html.ValidationMessageFor(model => model.Descricao)
-        </div>
-
+        </div><br />
          <div class="editor-label">
-            @Html.DropDownListFor(model => model.Cenario, ViewBag.Cenario as List<SelectListItem>, "Selecione...", new { @class = "input" })
-        </div>
+            @Html.LabelFor(model => model.Dispositivo)
+        </div> 
+         <div class="editor-label">
+            @Html.DropDownListFor(model => model.Dispositivo, ViewBag.Dispositivo as List<SelectListItem>, "Selecione...", new { @class = "input" })
+        </div><br />
         <div class="editor-label">
             @Html.LabelFor(model => model.Ativo)
         </div> 
@@ -28,6 +30,9 @@
             @Html.EditorFor(model => model.Ativo)
             @Html.ValidationMessageFor(model => model.Ativo)
         </div>   <br />
+         <div class="editor-label">
+            @Html.LabelFor(model => model.DataAgendamento)
+        </div> 
                       <div class="editor-field">
             @Html.EditorFor(model => model.DataAgendamento)
         @*    @Html.ValidationMessageFor(model => model.DataAgendamento)*@
