--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
@@ -13,6 +13,9 @@
  <table id="Grid" class="table table-bordered">
     <tr>
         <th>
+           Residência
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Chave)
         </th>
         <th>
