--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/RegistrarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/RegistrarAgendamento.cshtml
@@ -36,7 +36,7 @@
             @Html.LabelFor(model => model.DataAgendamento)
         </div>
               <div class="editor-field">
-            @Html.EditorFor(model => model.DataAgendamento)
+            @Html.Editor("DataHoraAgendamento")
           @*  @Html.ValidationMessageFor(model => model.DataAgendamento)*@
         </div> 
         <br />
@@ -56,7 +56,7 @@
 <script src="~/Scripts/jquery.mask.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-        $("#DataAgendamento").mask('00/00/0000 00:00:00');
+        $("#DataHoraAgendamento").mask('00/00/0000 00:00:00');
     });
 </script>
 
