--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -198,6 +198,7 @@
                 </a>
                 <ul class="submenu">
                      <li>@Html.ActionLink("Ativar Cenário", "AtivarCenario", "Cenario")</li>
+                      <li>@Html.ActionLink("Desativar Cenário", "DesativarCenario", "Cenario")</li>
                     <li>@Html.ActionLink("ADD Dispositivos", "AssociarDispositivo", "Cenario")</li>
                     <li>@Html.ActionLink("Novo Cenário", "ListarCenario", "Cenario")</li>
                      
