--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/RegistrarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/RegistrarAgendamento.cshtml
@@ -36,8 +36,22 @@
             @Html.LabelFor(model => model.DataAgendamento)
         </div>
               <div class="editor-field">
-            @Html.Editor("DataHoraAgendamento")
-          @*  @Html.ValidationMessageFor(model => model.DataAgendamento)*@
+               
+  <div id="datetimepicker4" class="input-append">
+    @Html.EditorFor(model => model.Hora)
+    <span class="add-on">
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+      </i>
+    </span>
+  </div>
+     <div id="datetimepicker4" class="input-append">
+    @Html.EditorFor(model => model.Data)
+    <span class="add-on">
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+      </i>
+    </span>
+  </div>
+
         </div> 
         <br />
 
@@ -53,12 +67,31 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-<script src="~/Scripts/jquery.mask.min.js"></script>
+
+<script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
+<link href="~/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+
+<script type="text/javascript">
+    $(function () {
+        $('#datetimepicker4').datetimepicker({
+            pickTime: false
+        });
+    });
+</script>
+<script type="text/javascript">
+    $(function () {
+        $('#datetimepicker3').datetimepicker({
+            pickDate: false
+        });
+    });
+</script>
+
+@*<script src="~/Scripts/jquery.mask.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         $("#DataHoraAgendamento").mask('00/00/0000 00:00:00');
     });
-</script>
+</script>*@
 
 
 
