--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/ListarAgendamento.cshtml
@@ -12,7 +12,6 @@
 </p>
  <table id="Grid" class="table table-bordered">
     <tr>
-       
         <th>
             @Html.DisplayNameFor(model => model.Chave)
         </th>
@@ -27,9 +26,11 @@
            Data e Hora do Agendamento
         </th>
         
-       
+        <th>
+            @Html.DisplayNameFor(model => model.Desativado)
+        </th>
         
-        <th>Opções</th>
+        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -48,10 +49,15 @@
             @Html.DisplayFor(modelItem => item.DataAgendamento)
         </td>
         <td>
-             @Html.ActionLink("Editar", "EditarAgendamento", new { chave = item.Chave }) |
-            @Html.ActionLink("Delete", "DeleteAgendamento", new { chave = item.Chave })
+
+        <td>
+            @Html.DisplayFor(modelItem => item.Desativado)
+        </td>
        
-        
+        <td>
+              @Html.ActionLink("Editar", "EditarAgendamento", new { chave = item.Chave }) |
+            @Html.ActionLink("Delete", "DeleteAgendamento", new { chave = item.Chave })
+        </td>
     </tr>
 }
 
