--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/EditarAgendamento.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Agendamento/EditarAgendamento.cshtml
@@ -34,7 +34,7 @@
             @Html.LabelFor(model => model.DataAgendamento)
         </div> 
                       <div class="editor-field">
-             @Html.Editor("DataHoraAgendamento")
+            @Html.EditorFor(model => model.DataAgendamento)
         @*    @Html.ValidationMessageFor(model => model.DataAgendamento)*@
         </div> 
         <br />
@@ -51,9 +51,3 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-<script src="~/Scripts/jquery.mask.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#DataHoraAgendamento").mask('00/00/0000 00:00:00');
-    });
-</script>
