--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -197,9 +197,9 @@
                     <i class="icon-chevron-down"></i>
                 </a>
                 <ul class="submenu">
-                     <li>@Html.ActionLink("Ativar Cenário", "AtivarCenario", "Cenario")</li>
+                     <li>@Html.ActionLink("Ativar", "AtivarCenario", "Cenario")</li>
                     <li>@Html.ActionLink("Dispositivos", "AssociarDispositivo", "Cenario")</li>
-                    <li>@Html.ActionLink("Novo Cenário", "ListarCenario", "Cenario")</li>
+                    <li>@Html.ActionLink("Novo", "ListarCenario", "Cenario")</li>
                      
 
                 </ul>
