--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Shared/_Layout.cshtml
@@ -212,7 +212,7 @@
                     <i class="icon-chevron-down"></i>
                 </a>
                 <ul class="submenu">
-                    <li>@Html.ActionLink("Uso", "")</li>
+                    <li>@Html.ActionLink("Uso", "ListarHistoricoUsoDispositivo", "Relatorio")</li>
                     <li>@Html.ActionLink("Logs", "ListarLogs", "Relatorio")</li>
                     <li>@Html.ActionLink("Consumo", "")</li>
 
