--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/ReportViewer/RepLog.rdlc
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/ReportViewer/RepLog.rdlc
@@ -6,49 +6,16 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.77812cm</Width>
+              <Width>7.61224cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>6.97146cm</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>4.52437cm</Width>
+              <Width>8.58405cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
               <Height>0.90427cm</Height>
               <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox1">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Cd usuario</Value>
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox1</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Textbox3">
@@ -59,7 +26,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Descricao</Value>
-                              <Style />
+                              <Style>
+                                <FontSize>12pt</FontSize>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style />
@@ -71,6 +40,7 @@
                           <Color>LightGrey</Color>
                           <Style>Solid</Style>
                         </Border>
+                        <BackgroundColor>Silver</BackgroundColor>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -89,7 +59,9 @@
                           <TextRuns>
                             <TextRun>
                               <Value>Data Cadastro</Value>
-                              <Style />
+                              <Style>
+                                <FontSize>12pt</FontSize>
+                              </Style>
                             </TextRun>
                           </TextRuns>
                           <Style />
@@ -101,6 +73,7 @@
                           <Color>LightGrey</Color>
                           <Style>Solid</Style>
                         </Border>
+                        <BackgroundColor>Silver</BackgroundColor>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -114,36 +87,6 @@
             <TablixRow>
               <Height>0.90427cm</Height>
               <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Cd_usuario">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>=Fields!Cd_usuario.Value</Value>
-                              <Style />
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Cd_usuario</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Descricao">
@@ -212,7 +155,6 @@
           <TablixMembers>
             <TablixMember />
             <TablixMember />
-            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -226,9 +168,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSetLog</DataSetName>
-        <Top>1.47849cm</Top>
+        <Top>1.92828cm</Top>
+        <Left>0.31371cm</Left>
         <Height>1.80854cm</Height>
-        <Width>14.27395cm</Width>
+        <Width>16.19629cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -244,6 +187,7 @@
               <TextRun>
                 <Value>Relatório de Logs</Value>
                 <Style>
+                  <FontSize>12pt</FontSize>
                   <FontWeight>Bold</FontWeight>
                 </Style>
               </TextRun>
@@ -257,7 +201,7 @@
         <Top>0.65828cm</Top>
         <Left>6.00604cm</Left>
         <Height>0.6cm</Height>
-        <Width>3.74354cm</Width>
+        <Width>4.00812cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
@@ -605,9 +549,9 @@
         </ChartNoDataMessage>
         <DataSetName>DataSetLog</DataSetName>
         <Top>4.75933cm</Top>
-        <Left>0.73766cm</Left>
+        <Left>0.31371cm</Left>
         <Height>5cm</Height>
-        <Width>13.85cm</Width>
+        <Width>16.19629cm</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
@@ -619,7 +563,7 @@
         </Style>
       </Chart>
     </ReportItems>
-    <Height>3.84225in</Height>
+    <Height>3.84226in</Height>
     <Style />
   </Body>
   <Width>6.5in</Width>
